--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <script type="text/javascript">
     // Khai báo biến
-    const URL = "https://teachablemachine.withgoogle.com/models/c9mkYsguO/";
+    const URL = "https://teachablemachine.withgoogle.com/models/GNbdaV50A/";
     let model, webcam, labelContainer, maxPredictions;
     let currentClass = "";
     let currentAudio = null;
