--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
         <source src="Resources/UNILEVER - NÀY NÀY, PHÂN LOẠI RÁC ĐI NÀO!.mp3" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
-    <img id="logo" src="">
+    <img id="logo" src="
+    ">
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
     <script type="text/javascript">
     // Khai báo biến
-    const URL = "https://teachablemachine.withgoogle.com/models/GNbdaV50A/";
+    const URL = "https://teachablemachine.withgoogle.com/models/p6sFGcBf5/";
     let model, webcam, labelContainer, maxPredictions;
     let currentClass = "";
     let currentAudio = null;
