--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <script type="text/javascript">
     // Khai báo biến
-    const URL = "https://teachablemachine.withgoogle.com/models/3vgQiWews/";
-    let model, webcam, labelContainer, maxPredictions;
+    const URL = "https://teachablemachine.withgoogle.com/models/qARStCpNR/";
+    let model, webcam, labelContainer, maxPredictions;h
     let currentClass = "";
     let currentAudio = null;
     let chodocmotlan = true;
