--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script type="text/javascript">
     // Khai báo biến
     const URL = "https://teachablemachine.withgoogle.com/models/WkCLVVCTJ/";
-    let model, webcam, labelContainer, maxPredictions;h
+    let model, webcam, labelContainer, maxPredictions;
     let currentClass = "";
     let currentAudio = null;
     let chodocmotlan = true;
