--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script type="text/javascript">
     // Khai báo biến
-    const URL = "https://teachablemachine.withgoogle.com/models/WkCLVVCTJ/";
+    const URL = "https://teachablemachine.withgoogle.com/models/Rt43xZb4t/";
     let model, webcam, labelContainer, maxPredictions;
     let currentClass = "";
     let currentAudio = null;
